# culib

./: .gitignore  CMakeLists.txt
benchmarks/: CMakeLists.txt  main.cu
benchmarks/data/v0.1.0-3/dependent/GeForce RTX 2080/warp/exclusive scan/cub.v1.8.0/: int
benchmarks/data/v0.1.0-3/dependent/GeForce RTX 2080/warp/exclusive scan/culib/: int
benchmarks/data/v0.1.0-3/dependent/GeForce RTX 2080/warp/reduce/cub.v1.8.0/: double  int
benchmarks/data/v0.1.0-3/dependent/GeForce RTX 2080/warp/reduce/culib/: double  int
benchmarks/include/: results.h
benchmarks/scripts/: plot.py
benchmarks/src/: main.cu  results.cpp
cmake/: version.cuh.in
docs/: .Doxyfile.in.swp  CMakeLists.txt  Doxyfile.in  conf.py  index.rst  warp.rst
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt
examples/common/include/: png_reader.h
examples/common/src/: png_reader.cpp
examples/img_convolution/: CMakeLists.txt  convolution.cu
examples/img_div/: CMakeLists.txt  div.cu
examples/img_histogram/: CMakeLists.txt  histogram.cu  plot.py
examples/img_minmax/: CMakeLists.txt  minmax.cu
examples/img_minmax/cmake/: FindNCCL.cmake
include/culib/block/: histogram.cuh  reduce.cuh
include/culib/device/: histogram.cuh  reduce.cuh  scan.cuh
include/culib/device/memory/: api.h  const_resizable_array.cuh  pointer.h  resizable_array.h
include/culib/node/: communication.h  node_info.cuh  reduce.cuh
include/culib/utils/: placeholder.h
include/culib/utils/cuda/: version.h
include/culib/utils/meta/: any.cuh  binary_ops.cuh  limits.cuh  math.cuh
include/culib/warp/: compact.cuh  reduce.cuh  scan.cuh  shuffle.cuh  utils.cuh
include/culib/warp/detail/: warp_reduce.cuh  warp_scan.cuh  warp_shuffle.cuh
src/node/: communication.cpp
test/: CMakeLists.txt
test/gtest/googletest/include/gtest/: gtest-matchers.h
test/gtest/googletest/include/gtest/internal/: gtest-param-util.h
test/include/: test_helper.cuh
test/src/: gtest_runner.cpp
test/src/block/: histogram_test.cu  reduce_test.cu
test/src/device/: const_resizable_array_test.cu  pointer_test.cu  reduce_test.cu  resizable_array_test.cu
test/src/node/: communication_test.cu  reduce_test.cu
test/src/warp/: compact_test.cu  reduce_test.cu  scan_test.cu
